--- a/src/components/Button/styles/BaseButton.module.scss
+++ b/src/components/Button/styles/BaseButton.module.scss
@@ -6,6 +6,10 @@
   align-items: center;
   gap: var(--space-2);
   text-decoration: none;
+  -webkit-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
   justify-content: center;
 
   &--start {
