--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -51,7 +51,7 @@
     aspect-ratio: 1/ 1;
 
     &:hover {
-      background-color: var(--color-accent-a4);
+      background-color: var(--color-accent-4);
       padding: var(--space-2);
       box-sizing: border-box;
       border-radius: max(var(--radius-3), var(--radius-full));
@@ -77,7 +77,7 @@
       color: var(--color-accent-1);
       &:hover {
         color: var(--color-accent-1);
-        background-color: var(--color-accent-a4);
+        background-color: var(--color-accent-4);
       }
     }
   }
