--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -103,6 +103,10 @@
       margin: 0;
       margin-top: var(--space-1);
     }
+    .heading-title-wrapper {
+      width: 100%;
+      height: 100%;
+    }
     .heading-action {
       display: flex;
       align-items: center;
