--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -60,14 +60,20 @@
   align-items: center;
   gap: var(--space-2);
   justify-content: flex-end;
-}
 
-@include --smAndDown {
+  &--mobile {
+    display: none;
+  }
+}
+@include --xs {
   .wrapper {
     padding: var(--space-2) var(--space-2);
   }
   .action {
     display: none;
+    &--mobile {
+      display: flex;
+    }
   }
 }
 
