Button design changed

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,4 +3,5 @@
 @import './styles/SolidButton.module.scss';
 @import './styles/GhostButton.module.scss';
 @import './styles/OutlinedButton.module.scss';
-@import './styles/TextButton.module.scss';
+@import './styles/TransparentButton.module.scss';
+@import './styles/TranslucentButton.module.scss';
