--- a/src/components/Button/styles/TransparentButton.module.scss
+++ b/src/components/Button/styles/TransparentButton.module.scss
@@ -1,19 +1,17 @@
-.button--text {
+.button--transparent {
   color: var(--color-accent-9);
   background-color: transparent;
-  // background-color: rgba(var(--color-accent-90), 0.2);
 
   &:hover {
     background-color: var(--color-accent-4);
   }
 
   &:active {
-    // background-color: rgba(var(--color-accent-80), 0.2);
-    box-shadow: boxShadowAlpha(var(--color-accent-9));
+    background-color: var(--color-accent-3);
+    // box-shadow: boxShadowAlpha(var(--color-accent-9));
   }
 
   &:focus {
-    // box-shadow: boxShadow(var(--color-accent-90));
   }
   > .icon-prepend {
     color: var(--color-accent-9);
@@ -26,19 +24,16 @@
   &.button--high-contrast {
     color: var(--color-accent-12);
     background-color: transparent;
-    // background-color: rgba(var(--color-accent-90), 0.2);
 
     &:hover {
       background-color: var(--color-accent-4);
     }
 
     &:active {
-      // background-color: rgba(var(--color-accent-80), 0.2);
-      box-shadow: boxShadowAlpha(var(--color-accent-12));
+      // // box-shadow: boxShadowAlpha(var(--color-accent-12));
     }
 
     &:focus {
-      // box-shadow: boxShadow(var(--color-accent-90));
     }
     > .icon-prepend {
       color: var(--color-accent-12);
