--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/lib/functions';
+
 .toast {
   z-index: 9999;
   max-width: 480px;
@@ -12,10 +14,28 @@
   gap: var(--space-3);
 
   opacity: 0;
-  background-color: var(--color-accent-9);
   border-radius: max(var(--radius-3), var(--radius-full));
-  color: var(--color-accent-9-contrast);
   height: 0;
+
+  &--solid {
+    background-color: var(--color-accent-9);
+    color: var(--color-accent-9-contrast);
+  }
+  &--ghost {
+    background-color: var(--color-accent-4);
+    color: var(--color-accent-11);
+  }
+  &--outlined {
+    background-color: transparent;
+    color: var(--color-accent-11);
+    border: 1px solid var(--color-accent-a7);
+  }
+  &--translucent {
+    color: var(--color-accent-12);
+    background-color: opacity(var(--color-accent-12), 95%);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+  }
   // transform: translateY(8px);
 
   transition:
@@ -29,24 +49,24 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    color: var(--color-accent-9-contrast);
+    color: inherit;
   }
 
   > .text {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    color: var(--color-accent-9-contrast);
+    color: inherit;
   }
 
   > .action {
     width: 32px;
     height: 32px;
     display: flex;
+    color: inherit;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    color: var(--color-accent-9-contrast);
     cursor: pointer;
     aspect-ratio: 1/ 1;
 
@@ -61,25 +81,6 @@
     height: 48px;
     opacity: 1;
     // transform: translateY(0);
-  }
-
-  &--highContrast {
-    color: var(--color-accent-1);
-    background-color: var(--color-accent-12);
-
-    > .icon {
-      color: var(--color-accent-1);
-    }
-    > .text {
-      color: var(--color-accent-1);
-    }
-    > .action {
-      color: var(--color-accent-1);
-      &:hover {
-        color: var(--color-accent-1);
-        background-color: var(--color-accent-4);
-      }
-    }
   }
 }
 
