--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,12 +1,13 @@
 .table {
   width: 100%;
+  font-size: var(--font-size-3);
+  color: var(--color-gray-12);
   border-collapse: collapse;
 }
 
 .root {
   width: 100%;
   display: table;
-  overflow-x: auto;
 }
 
 .header,
@@ -20,14 +21,23 @@
   }
 }
 
+.column {
+  // &:hover {
+  //   background-color: var(--color-gray-a5);
+  // }
+}
+
 .columnHeaderCell,
 .rowHeaderCell,
 .cell {
   padding: 8px;
   font-weight: normal;
   text-align: left;
-  //   font-size: var(--font-size-3);
   border-bottom: 1px solid var(--color-gray-a5);
+
+  &:hover::after {
+    background-color: var(--color-gray-a5);
+  }
 }
 
 .columnHeaderCell {
