layout padding fixed

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -2,7 +2,7 @@
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding: var(--radius-6);
+  padding: var(--space-4);
 }
 
 .row {
