--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -70,9 +70,13 @@
     display: none;
   }
 }
+
 @include --xs {
   .wrapper {
     padding: var(--space-2) var(--space-2);
+  }
+  .body {
+    content-visibility: hidden;
   }
   .action {
     display: none;
@@ -88,5 +92,11 @@
   }
   .body {
     content-visibility: hidden;
+  }
+  .action {
+    display: flex;
+    &--mobile {
+      display: none;
+    }
   }
 }
