--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -27,6 +27,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+
   box-sizing: border-box;
   padding: var(--space-2) var(--space-6);
 
@@ -76,7 +77,7 @@
     padding: var(--space-2) var(--space-4);
   }
   .body {
-    content-visibility: hidden;
+    visibility: hidden;
   }
   .action {
     display: flex;
@@ -91,7 +92,7 @@
     padding: var(--space-2) var(--space-2);
   }
   .body {
-    content-visibility: hidden;
+    visibility: hidden;
   }
   .action {
     display: none;
