box shadow removed

--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -78,7 +78,7 @@
       outline: none;
       border-color: var(--color-accent-9);
       // background-color: var(--color-surface-accent);
-      box-shadow: 0 0 0 4px var(--color-accent-9a9);
+      // box-shadow: 0 0 0 4px var(--color-accent-9a9);
     }
   }
 
@@ -88,7 +88,7 @@
       outline: none;
       border-color: var(--color-accent-9);
       background-color: var(--color-surface-accent);
-      box-shadow: 0 0 0 4px var(--color-accent-a9);
+      // box-shadow: 0 0 0 4px var(--color-accent-a9);
     }
   }
   &.hasPrependIcon {
