--- a/src/components/TextArea/TextArea.module.scss
+++ b/src/components/TextArea/TextArea.module.scss
@@ -34,7 +34,7 @@
     &:hover {
       outline: none;
       border-color: var(--color-accent-9);
-      box-shadow: 0 0 0 4px var(--color-accent-a9);
+      // box-shadow: 0 0 0 4px var(--color-accent-a9);
     }
   }
 
@@ -44,7 +44,7 @@
       outline: none;
       border-color: var(--color-accent-9);
       background-color: var(--color-surface-accent);
-      box-shadow: 0 0 0 4px var(--color-accent-a9);
+      // box-shadow: 0 0 0 4px var(--color-accent-a9);
     }
   }
 
