--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   padding: var(--space-1) var(--space-2);
   border-radius: max(var(--radius-2), var(--radius-full));
+  box-sizing: border-box;
   font-size: 0.75rem;
   text-align: center;
   white-space: nowrap;
@@ -25,18 +26,18 @@
 
   &.badge--high-contrast {
     color: var(--color-accent-12);
-    background-color: var(--color-accent-4);
+    background-color: var(--color-accent-3);
   }
 }
 
 .badge--outlined {
   background-color: transparent;
   color: var(--color-accent-11);
-  border: 1px solid var(--color-accent-a10);
+  border: 1px solid var(--color-accent-a7);
 
   &.badge--high-contrast {
     background-color: transparent;
     color: var(--color-accent-12);
-    border: 1px solid var(--color-accent-a9);
+    border: 1px solid var(--color-accent-a10);
   }
 }
