--- a/src/components/Breadcrumb/Breadcrumb.module.scss
+++ b/src/components/Breadcrumb/Breadcrumb.module.scss
@@ -6,30 +6,48 @@
 
 .item {
   text-decoration: none;
-  color: var(--color-accent-a6);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 
-  &--active {
-    color: var(--color-accent-9);
+  &--normal {
+    color: var(--color-accent-a6);
 
-    &.item--highContrast {
-      // Corrected the nesting here
-      color: var(--color-accent-12);
+    &.active {
+      color: var(--color-accent-9);
+
+      &.highContrast {
+        // Corrected the nesting here
+        color: var(--color-accent-12);
+      }
+    }
+
+    &.highContrast:not(.active) {
+      // Apply high contrast to non-active items
+      color: var(--color-accent-a7);
     }
   }
 
-  &--highContrast:not(&--active) {
-    // Apply high contrast to non-active items
-    color: var(--color-accent-a7);
+  &--inverse {
+    color: var(--color-accent-9);
+
+    &.active {
+      color: var(--color-accent-a6);
+      &.highContrast {
+        color: var(--color-accent-a7);
+      }
+    }
+
+    &.highContrast:not(.active) {
+      color: var(--color-accent-12);
+    }
   }
 }
 
 .divider {
   color: var(--color-accent-a9);
 
-  &--highContrast {
+  &.highContrast {
     color: var(--color-accent-12);
   }
 }
