--- a/src/components/Button/styles/SolidButton.module.scss
+++ b/src/components/Button/styles/SolidButton.module.scss
@@ -26,10 +26,14 @@
 
     &:hover {
       background-color: var(--color-accent-12);
+      filter: contrast(0.88) saturate(1.3) brightness(1.18);
+      -webkit-filter: contrast(0.88) saturate(1.3) brightness(1.18);
     }
 
     &:active {
       background-color: var(--color-accent-12);
+      filter: brightness(0.95) saturate(1.2);
+      -webkit-filter: brightness(0.95) saturate(1.2);
       // box-shadow: boxShadowAlpha(var(--color-accent-11));
     }
 
