sudo theme minor changed

--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -78,6 +78,7 @@
   }
   .body {
     visibility: hidden;
+    width: 0;
   }
   .action {
     display: flex;
@@ -93,6 +94,7 @@
   }
   .body {
     visibility: hidden;
+    width: 0;
   }
   .action {
     display: none;
