--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -33,8 +33,8 @@
   &--translucent {
     color: var(--color-accent-12);
     background-color: opacity(var(--color-accent-12), 95%);
-    backdrop-filter: blur(15px);
-    -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: var(--translucent);
+    -webkit-backdrop-filter: var(--translucent);
   }
   // transform: translateY(8px);
 
