--- a/src/components/ExpansionPanel/ExpansionPanel.module.scss
+++ b/src/components/ExpansionPanel/ExpansionPanel.module.scss
@@ -1,51 +1,50 @@
-
 .panelContainer {
-    border-radius: max(var(--radius-3), var(--radius-full));
-    overflow: hidden;
+  border-radius: max(var(--radius-3), var(--radius-full));
+  overflow: hidden;
 
-
-    &.outlined {
-        border: 1px solid var(--color-accent-a6);
-    }
+  &.outlined {
+    border: 1px solid var(--color-accent-a6);
+  }
 }
 
 .item {
-    &:not(:last-child){
-        &.outlined {
-            border-bottom: 1px solid var(--color-accent-a6);
-        }
+  &:not(:last-child) {
+    &.outlined {
+      border-bottom: 1px solid var(--color-accent-a6);
     }
+  }
 }
 
 .header {
-    background-color: var(--color-accent-a2);
-    padding: var(--space-2) var(--space-4);
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: var(--color-accent-a2);
+  color: var(--color-accent-12);
+  font-size: var(--font-size-4);
+  padding: var(--space-2) var(--space-4);
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    &:hover {
-        background-color: var(--color-accent-a3);
-    }
+  &:hover {
+    background-color: var(--color-accent-a3);
+  }
 }
-
 
 .contentWrapper {
-    overflow: hidden;
-
+  overflow: hidden;
 }
 .content {
-    background-color: var(--color-accent-a2);
-    overflow: hidden;
-    margin-top: -100%;
-    transition: margin-top 0.2s ease-in-out;
-    padding: var(--space-4);
-    &.expanded {
-        margin-top: 0;
-        &.outlined {
-            border-top: 1px solid var(--color-accent-a6);
-        }
+  background-color: var(--color-accent-a2);
+  overflow: hidden;
+  color: var(--color-accent-12);
+  font-size: var(--font-size-4);
+  margin-top: -100%;
+  transition: margin-top 0.2s ease-in-out;
+  padding: var(--space-4);
+  &.expanded {
+    margin-top: 0;
+    &.outlined {
+      border-top: 1px solid var(--color-accent-a6);
     }
+  }
 }
-
