--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -1,10 +1,11 @@
 @import '@/styles/lib/breakpoints.scss';
-:root {
+.woozdesign {
   --appbar-height: calc(64px * var(--scaling));
 }
 
 .header {
   width: 100%;
+  height: var(--appbar-height);
 
   &--absolute {
     position: absolute;
@@ -21,7 +22,6 @@
   }
 }
 .wrapper {
-  --appbar-height: calc(64px * var(--scaling));
   width: 100%;
   display: flex;
   flex-direction: row;
