--- a/src/components/Typography/Typography.module.scss
+++ b/src/components/Typography/Typography.module.scss
@@ -6,6 +6,7 @@ $title-margin: 1rem 0;
   font-weight: 400;
   margin: 0;
   font-size: $fontSize;
+  line-height: 1.5;
   color: var(--color-accent-9);
 
   &.heading--highContrast {
