--- a/src/components/IconButton/IconButton.module.scss
+++ b/src/components/IconButton/IconButton.module.scss
@@ -1,3 +1,4 @@
+// @use
 @import '@/styles/lib/functions';
 @import './styles/BaseButton.module.scss';
 @import '@/components/Button/styles/SolidButton.module.scss';
