--- a/src/styles/lib/fonts.scss
+++ b/src/styles/lib/fonts.scss
@@ -4,3 +4,7 @@
 // font-family: Inter;
 // src: url('https://fonts.googleapis.com/css?family=Inter');
 // }
+
+.woozdesign {
+  --default-font-family: 'Inter', sans-serif;
+}
