--- a/src/styles/lib/tokens/space.scss
+++ b/src/styles/lib/tokens/space.scss
@@ -9,4 +9,7 @@
   --space-7: calc(40px * var(--scaling));
   --space-8: calc(48px * var(--scaling));
   --space-9: calc(64px * var(--scaling));
+  --space-10: calc(72px * var(--scaling));
+  --space-11: calc(81px * var(--scaling));
+  --space-12: calc(90px * var(--scaling));
 }
