--- a/src/components/Button/styles/OutlinedButton.module.scss
+++ b/src/components/Button/styles/OutlinedButton.module.scss
@@ -28,7 +28,7 @@
     color: var(--color-accent-11);
   }
 
-  &.button--high-contrast {
+  &.highContrast {
     background-color: transparent;
     transition: box-shadow 0.08s ease-in;
     color: var(--color-accent-12);
