--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -70,7 +70,7 @@
       padding: var(--space-1) var(--space-2);
     }
 
-    &.high-contrast {
+    &.highContrast {
       color: var(--color-accent-12);
 
       &:hover {
@@ -89,7 +89,7 @@
     color: var(--color-accent-12);
     font-weight: bold;
 
-    &.high-contrast {
+    &.highContrast {
       color: var(--color-accent-12);
     }
 
