--- a/src/components/Tab/Tab.module.scss
+++ b/src/components/Tab/Tab.module.scss
@@ -57,7 +57,7 @@
     padding: var(--space-1) var(--space-2);
   }
 
-  &.trigger--high-contrast {
+  &.highContrast {
     color: var(--color-accent-12);
     &:hover {
       background-color: var(--color-accent-5);
