--- a/src/components/Button/styles/GhostButton.module.scss
+++ b/src/components/Button/styles/GhostButton.module.scss
@@ -18,7 +18,7 @@
     color: var(--color-accent-11);
   }
 
-  &.button--high-contrast {
+  &.highContrast {
     color: var(--color-accent-12);
     background-color: var(--color-accent-3);
 
