--- a/src/components/Button/styles/SolidButton.module.scss
+++ b/src/components/Button/styles/SolidButton.module.scss
@@ -20,7 +20,7 @@
     color: var(--color-accent-9-contrast);
   }
 
-  &.button--high-contrast {
+  &.highContrast {
     color: var(--color-accent-1);
     background-color: var(--color-accent-12);
 
