--- a/src/components/Button/styles/TranslucentButton.module.scss
+++ b/src/components/Button/styles/TranslucentButton.module.scss
@@ -25,7 +25,7 @@
     color: var(--color-accent-9);
   }
 
-  &.button--high-contrast {
+  &.highContrast {
     color: var(--color-accent-12);
     background-color: transparent;
 
