--- a/src/components/Checkbox/Checkbox.module.scss
+++ b/src/components/Checkbox/Checkbox.module.scss
@@ -2,13 +2,13 @@
 .wrapper {
   margin-bottom: var(--space-2);
 }
+
 .checkbox {
   position: relative;
   display: inline-flex;
   flex-direction: row;
   align-items: center;
   cursor: pointer;
-  height: 24px;
   vertical-align: middle;
 
   &--small {
@@ -16,6 +16,18 @@
 
     .label {
       font-size: var(--font-size-3);
+      padding-left: var(--space-2);
+      &--error {
+        color: var(--color-red-9);
+      }
+    }
+  }
+
+  &--medium {
+    height: 24px;
+
+    .label {
+      font-size: var(--font-size-4);
       padding-left: var(--space-2);
       &--error {
         color: var(--color-red-9);
@@ -46,55 +58,18 @@
       }
     }
   }
+
   &--disabled {
     opacity: 0.7;
     cursor: not-allowed;
   }
 
-  .input {
-    position: absolute;
-    opacity: 0;
-    height: 0;
-    width: 0;
-
-    &:checked + .checkmark {
-      background-color: var(--color-accent-9); // fallback to #2196F3 if no accent color set
-
-      &::after {
-        display: block;
-      }
+  &--checked {
+    .checkmark {
+      transition: background-color 0.2s;
+      box-shadow: inset 0 0 0 1px var(--color-accent-9);
+      // ... and any other styles you want when the custom checkbox is checked
     }
-  }
-
-  .checkmark {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    aspect-ratio: 1/ 1;
-    height: 100%;
-
-    background-color: transparent;
-    box-shadow: inset 0 0 0 1px var(--color-gray-a7);
-    border-radius: max(var(--radius-3), var(--radius-full));
-    transition: background-color 0.2s;
-  }
-  &--checked .checkmark {
-    transition: background-color 0.2s;
-    box-shadow: inset 0 0 0 1px var(--color-accent-9);
-    // ... and any other styles you want when the custom checkbox is checked
-  }
-
-  .error {
-    box-shadow: inset 0 0 0 1px var(--color-red-9);
-    background-color: var(--color-red-surface);
-  }
-}
-
-.label {
-  font-size: var(--font-size-4);
-  padding-left: var(--space-2);
-  &--error {
-    color: var(--color-red-9);
   }
 }
 
@@ -103,4 +78,33 @@
   height: 16px;
   margin-top: 4px;
   font-size: 0.8rem;
+}
+
+.input {
+  position: absolute;
+  opacity: 0;
+  height: 0;
+  width: 0;
+
+  &:checked + .checkmark {
+    color: var(--color-accent-9-contrast);
+    background-color: var(--color-accent-9); // fallback to #2196F3 if no accent color set
+
+    &::after {
+      display: block;
+    }
+  }
+}
+
+.checkmark {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  aspect-ratio: 1/ 1;
+  height: 100%;
+
+  background-color: transparent;
+  box-shadow: inset 0 0 0 1px var(--color-gray-a7);
+  border-radius: max(var(--radius-3), var(--radius-full));
+  transition: background-color 0.2s;
 }
