--- a/src/styles/lib/utils/utils.scss
+++ b/src/styles/lib/utils/utils.scss
@@ -14,4 +14,8 @@
 @import './vertical-align.scss';
 
 @import './width.scss';
+@import './max-width.scss';
+@import './min-width.scss';
 @import './height.scss';
+@import './max-height.scss';
+@import './min-height.scss';
