--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -1,20 +1,28 @@
 .wrapper {
   margin-bottom: var(--space-2);
-  &.large {
+
+  &--xlarge {
     .label {
       font-size: var(--font-size-4);
       margin-bottom: var(--space-1);
     }
   }
 
-  &.xlarge {
+  &--large {
     .label {
       font-size: var(--font-size-4);
       margin-bottom: var(--space-1);
     }
   }
 
-  &.small {
+  &--medium {
+    .label {
+      font-size: var(--font-size-3);
+      margin-bottom: var(--space-1);
+    }
+  }
+
+  &--small {
     .label {
       font-size: var(--font-size-2);
       margin-bottom: var(--space-1);
@@ -33,36 +41,41 @@
     max-width: 100%;
   }
 
-  &.large {
-    .input {
-      height: 40px;
-      padding: var(--space-1) var(--space-4);
-    }
-  }
-  &.xlarge {
+  &--xlarge {
     .input {
       height: 48px;
       padding: var(--space-1) var(--space-4);
     }
   }
 
-  &.small {
+  &--large {
+    .input {
+      height: 40px;
+      padding: var(--space-1) var(--space-4);
+    }
+  }
+
+  &--medium {
+    .input {
+      height: 32px;
+      padding: var(--space-1) var(--space-3);
+    }
+  }
+  &--small {
     .input {
       height: 28px;
       padding: var(--space-1) var(--space-3);
     }
   }
 }
+
 .label {
-  font-size: var(--font-size-3);
-  margin-bottom: var(--space-1);
   padding-left: var(--space-1);
 }
+
 .input {
   width: 100%;
-  height: 32px;
   line-height: 28px;
-  padding: var(--space-1) var(--space-3);
   border: 2px solid transparent;
   border-radius: max(var(--radius-3), var(--radius-full));
   outline: none;
