--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,7 +1,7 @@
 @import 'lib/reset.scss';
 @import 'lib/fonts.scss';
 @import 'lib/functions.scss';
-
+@import '~@woozdesign/colors/colors';
 @import '~@woozdesign/icons/dist/styles.css';
 
 @import 'lib/tokens/tokens.scss';
